Firebase Add Working

--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-router-dom": "^4.3.3",
     "bootstrap": "^4.3.1",
-    "firebase": "^6.0.4",
+    "firebase": "6.0.4",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
-    "react-redux-firebase": "^2.2.6",
+    "react-redux-firebase": "^3.0.0-alpha.12",
     "react-redux-firestore": "0.0.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
@@ -17,6 +18,7 @@
     "redux": "^4.0.1",
     "redux-firestore": "^0.8.0",
     "redux-thunk": "^2.3.0",
+    "start": "^5.1.0",
     "typescript": "3.4.5"
   },
   "scripts": {
@@ -39,5 +41,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^16.8.18",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-redux": "^7.0.9"
   }
 }
