--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@types/react-router-dom": "^4.3.3",
     "bootstrap": "^4.3.1",
-    "firebase": "6.0.4",
+    "firebase": "^6.0.4",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
