--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/react-router-dom": "^4.3.3",
     "bootstrap": "^4.3.1",
     "firebase": "^6.0.4",
-    "materialize-css": "^1.0.0-rc.2",
+    "materialize-css": "^1.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
@@ -43,8 +42,9 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^16.8.18",
+    "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
-    "@types/react-redux": "^7.0.9"
+    "@types/react-redux": "^7.0.9",
+    "@types/react-router-dom": "^4.3.3"
   }
 }
