--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "firebase": "^6.0.4",
+    "firebase": "^6.1.0",
+    "firebase-admin": "^8.0.0",
     "materialize-css": "^1.0.0",
     "moment": "^2.24.0",
     "react": "^16.8.6",
