--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/moment": "^2.13.0",
     "bootstrap": "^4.3.1",
     "firebase": "^6.1.0",
     "firebase-admin": "^8.0.0",
