--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
     "@types/react-redux": "^7.0.9",
-    "@types/react-router-dom": "^4.3.3"
+    "@types/react-router-dom": "^4.3.3",
+    "@types/reactstrap": "^8.0.1"
   }
 }
