--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "dependencies": {
     "@types/moment": "^2.13.0",
     "bootstrap": "^4.3.1",
+    "csstools": "^0.1.5",
     "firebase": "^6.1.0",
     "firebase-admin": "^8.0.0",
+    "jquery": "^3.4.1",
     "materialize-css": "^1.0.0",
     "moment": "^2.24.0",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
     "react-redux-firebase": "^3.0.0-alpha.12",
