--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.0.1",
+    "@material-ui/core": "^4.0.2",
     "@material-ui/icons": "^4.0.1",
     "@types/moment": "^2.13.0",
     "bootstrap": "^4.3.1",
@@ -11,6 +11,7 @@
     "firebase": "^6.1.0",
     "firebase-admin": "^8.0.0",
     "jquery": "^3.4.1",
+    "material-design-icons": "^3.0.1",
     "material-ui": "^0.20.2",
     "materialize-css": "^1.0.0",
     "moment": "^2.24.0",
