--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux-firestore": "0.0.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
+    "react-simple-checkbox": "^1.3.0",
     "reactstrap": "^8.0.0",
     "redux": "^4.0.1",
     "redux-firestore": "^0.8.0",
@@ -31,6 +32,7 @@
     "tslint": "^5.17.0",
     "typescript": "3.4.5"
   },
+  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -53,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@types/node": "^12.0.8",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
     "@types/react-redux": "^7.0.9",
