--- a/package.json
+++ b/package.json
@@ -30,9 +30,8 @@
     "redux-thunk": "^2.3.0",
     "start": "^5.1.0",
     "tslint": "^5.17.0",
-    "typescript": "3.4.5"
+    "typescript": "^3.4.5"
   },
-  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
