--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 //.babelrc
-{ "presets": [ "@babel/env",
+{ "presets": [ ["@babel/env", {"modules": false }],
     "@babel/react",
     "@babel/typescript"
     ],
