--- a/package.json
+++ b/package.json
@@ -38,11 +38,10 @@
     "typescript": "^3.4.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "webpack-dev-server --mode development --hot ",
+    "build": "webpack --mode production",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "webpack": "webpack-dev-server --history-api-fallback --inline --progress"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -66,12 +65,16 @@
     "@types/react-redux": "^7.0.9",
     "@types/react-router-dom": "^4.3.3",
     "@types/reactstrap": "^8.0.1",
+    "copy-webpack-plugin": "^5.0.3",
+    "css-hot-loader": "^1.4.4",
     "css-loader": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
     "raw-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "typings-for-css-modules-loader": "^1.7.0",
     "webpack": "^4.34.0",
     "webpack-cli": "^3.3.4",
     "webpack-dev-server": "^3.7.2",
