--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-redux-firestore": "0.0.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
+    "react-sidemenu": "^1.1.0",
     "react-simple-checkbox": "^1.3.0",
     "reactstrap": "^8.0.0",
     "redux": "^4.0.1",
