--- a/package.json
+++ b/package.json
@@ -3,40 +3,40 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/preset-env": "^7.4.5",
-    "@babel/preset-react": "^7.0.0",
-    "@material-ui/core": "^4.0.2",
-    "@material-ui/icons": "^4.0.1",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "@types/moment": "^2.13.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.6.0",
     "csstools": "^0.1.5",
-    "firebase": "^6.1.0",
-    "firebase-admin": "^8.0.0",
-    "jquery": "^3.4.1",
+    "firebase": "^8.2.3",
+    "firebase-admin": "^9.4.2",
+    "jquery": "^3.5.1",
     "material-design-icons": "^3.0.1",
     "material-ui": "^0.20.2",
     "materialize-css": "^1.0.0",
-    "moment": "^2.24.0",
-    "react": "^16.8.6",
-    "react-bootstrap": "^1.0.0-beta.8",
-    "react-dom": "^16.8.6",
-    "react-redux": "^7.0.3",
-    "react-redux-firebase": "^3.0.0-alpha.12",
+    "moment": "^2.29.1",
+    "react": "^17.0.1",
+    "react-bootstrap": "^1.4.3",
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-redux-firebase": "^3.9.0",
     "react-redux-firestore": "0.0.1",
-    "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.1",
     "react-sidemenu": "^1.1.0",
     "react-simple-checkbox": "^1.3.0",
-    "reactstrap": "^8.0.0",
-    "redux": "^4.0.1",
-    "redux-firestore": "^0.8.0",
+    "reactstrap": "^8.8.1",
+    "redux": "^4.0.5",
+    "redux-firestore": "^0.14.0",
     "redux-thunk": "^2.3.0",
     "start": "^5.1.0",
-    "tslint": "^5.17.0",
-    "typescript": "^3.4.5"
+    "tslint": "^5.20.1",
+    "typescript": "^4.1.3"
   },
   "scripts": {
     "start": "webpack-dev-server --mode development --hot ",
@@ -60,25 +60,25 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "^12.0.8",
-    "@types/react": "^16.8.19",
-    "@types/react-dom": "^16.8.4",
-    "@types/react-redux": "^7.0.9",
-    "@types/react-router-dom": "^4.3.3",
-    "@types/reactstrap": "^8.0.1",
-    "copy-webpack-plugin": "^5.0.3",
+    "@types/node": "^14.14.21",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.15",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/reactstrap": "^8.7.1",
+    "copy-webpack-plugin": "^7.0.0",
     "css-hot-loader": "^1.4.4",
-    "css-loader": "^3.0.0",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.7.0",
-    "node-sass": "^4.12.0",
-    "raw-loader": "^3.0.0",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
+    "css-loader": "^5.0.1",
+    "html-webpack-plugin": "^4.5.1",
+    "mini-css-extract-plugin": "^1.3.4",
+    "node-sass": "^5.0.0",
+    "raw-loader": "^4.0.2",
+    "sass-loader": "^10.1.1",
+    "style-loader": "^2.0.0",
     "typings-for-css-modules-loader": "^1.7.0",
-    "webpack": "^4.34.0",
-    "webpack-cli": "^3.3.4",
-    "webpack-dev-server": "^3.7.2",
-    "webpack-manifest-plugin": "^2.0.4"
+    "webpack": "^5.15.0",
+    "webpack-cli": "^4.4.0",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-manifest-plugin": "^3.0.0"
   }
 }
